<resources>
    <string name="app_name">Don\'t Let You Die</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="view_text_dont_have_an_account_yet">Dont have an account yet?</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_log_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Strings related to registration -->
    <string name="prompt_username">Username</string>
    <string name="view_text_already_have_an_account">You already have an account?</string>
    <string name="prompt_repeat_password">Repeat password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings related to taking a photo-->
    <string name="action_take_photo">Take Photo</string>

    <!-- Strings related to searching a friend-->
    <string name="search_a_friend">Search Or Add Friends</string>
    <string name="search">search</string>
    
    <!-- Categories, a proof might have -->
    <string-array name="category">
        <item>select category</item>
        <item>cooking</item>
        <item>education</item>
        <item>fitness</item>
        <item>food</item>
        <item>hygene</item>
        <item>sleep</item>
        <item>social</item>
        <item>water</item>
    </string-array>

</resources>